--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,33 @@ body{
     font-family: Poppins, "sans-serif";
 }
 
+.main-shadow{
+    box-shadow: 2px 2px 5px 0px #9D20FF1A;
+}
 
+/* width */
+::-webkit-scrollbar {
+    width: 11px;
+    height: 6px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #edf2f7;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #cbd5e0;
+    border-radius: 100vh;
+    border: 3px solid #edf2f7;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #a0aec0;
+  }
 
 @layer components{
     .profileJudul{
